feat: add multi-MAC host merge support
